--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,6 +24,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:name="com.coolweather.app.service.AutoUpdateService" ></service>
+        <receiver android:name="com.coolweather.app.receiver.AutoUpdateReceiver"></receiver>
     </application>
 
 </manifest>
